# fastsweep

./: .gitignore  CMakeLists.txt  setup.py  shaysweep.cp310-win_amd64.pyd  test.py
include/: redistance.h
src/: bindings.cpp  fastsweep.cu  redistance.cpp
tests/: test1.cpp
